// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should accept an active prop to show the input 1`] = `
<Layout
  accounts={
    Array [
      Object {
        "value": "main fund",
      },
    ]
  }
  active={true}
  inputVal="5.00"
  preFill={[Function]}
  state={
    Object {
      "fund": "main",
      "id": "test",
    }
  }
>
  <div>
    <div
      className="display-inline-block push-half-bottom h3 push-half-right text-dark-primary"
    >
      and give
    </div>
    <Input
      classes={
        Array [
          "soft-bottom",
          "input--active",
          "display-inline-block",
        ]
      }
      defaultValue={undefined}
      format={undefined}
      hideLabel={true}
      inputClasses="outlined--dotted outlined--light h3 hard-top flush-bottom text-brand show-placeholder_11ef8g5"
      pattern={true}
      placeholder="0.00"
      step="0.01"
      style={
        Object {
          "maxWidth": "165px",
          "paddingLeft": ".8em",
        }
      }
      type="tel"
      value="5.00"
    >
      <div
        className="input input--active soft-bottom input--active display-inline-block"
        data-spec="input-wrapper"
        style={
          Object {
            "maxWidth": "165px",
            "paddingLeft": ".8em",
          }
        }
      >
        <RenderLabel
          disabled={undefined}
          hideLabel={true}
          id={undefined}
          label={undefined}
          name={undefined}
          style={undefined}
        />
        <span
          className="
        dollar--icon
        hard-top
        flush-bottom
        text-brand"
          style={Object {}}
        >
          <input
            autoCapitalize="on"
            autoComplete="on"
            autoCorrect="on"
            className="outlined--dotted outlined--light h3 hard-top flush-bottom text-brand show-placeholder_11ef8g5"
            data-lpignore={undefined}
            data-spec="input"
            defaultValue={undefined}
            disabled={undefined}
            id={undefined}
            maxLength=""
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="0.00"
            readOnly={undefined}
            spellCheck={undefined}
            step="0.01"
            style={
              Object {
                "maxWidth": "165px",
                "paddingLeft": ".8em",
              }
            }
            type="tel"
          />
        </span>
      </div>
    </Input>
    <div
      className="display-block"
    >
      <h3
        className="text-dark-primary push-half-bottom push-half-right display-inline-block"
      >
        to
      </h3>
      <Select
        classes={
          Array [
            "soft-bottom",
            "display-inline-block",
            "select_1rryh47",
          ]
        }
        defaultValue="main fund"
        hideLabel={true}
        includeBlank={true}
        inputClasses="text-brand outlined--dotted outlined--light h3 hard-top flush-bottom"
        items={
          Array [
            Object {
              "value": "main fund",
            },
          ]
        }
        onChange={undefined}
        placeholder="select fund"
        selected={undefined}
      >
        <div
          className="input input--active soft-bottom display-inline-block select_1rryh47 select_e8htpf"
        >
          <select
            className="text-brand outlined--dotted outlined--light h3 hard-top flush-bottom"
            defaultValue="main fund"
            disabled={undefined}
            id={undefined}
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="select fund"
            style={undefined}
          >
            <option
              style={
                Object {
                  "display": "none",
                }
              }
            >
              select fund
            </option>
            <option
              className={undefined}
              key="0"
              value="main fund"
            >
              main fund
            </option>
          </select>
        </div>
      </Select>
    </div>
  </div>
</Layout>
`;

exports[`should accept custom classes thru classes prop 1`] = `
<Layout
  accounts={
    Array [
      Object {
        "value": "main fund",
      },
    ]
  }
  classes="test1 test2"
  preFill={[Function]}
  state={
    Object {
      "fund": "main",
      "id": "test",
    }
  }
>
  <div>
    <div
      className="display-inline-block push-half-bottom h3 push-half-right text-dark-primary"
    >
      and give
    </div>
    <Input
      classes={
        Array [
          "soft-bottom",
          "input--active",
          "display-inline-block",
        ]
      }
      defaultValue={undefined}
      format={undefined}
      hideLabel={true}
      inputClasses="outlined--dotted outlined--light h3 hard-top flush-bottom text-brand show-placeholder_11ef8g5"
      pattern={true}
      placeholder="0.00"
      step="0.01"
      style={
        Object {
          "maxWidth": "165px",
          "paddingLeft": ".8em",
        }
      }
      type="tel"
      value={undefined}
    >
      <div
        className="input soft-bottom input--active display-inline-block"
        data-spec="input-wrapper"
        style={
          Object {
            "maxWidth": "165px",
            "paddingLeft": ".8em",
          }
        }
      >
        <RenderLabel
          disabled={undefined}
          hideLabel={true}
          id={undefined}
          label={undefined}
          name={undefined}
          style={undefined}
        />
        <span
          className="
        dollar--icon
        hard-top
        flush-bottom
        text-brand"
          style={
            Object {
              "color": "#858585",
            }
          }
        >
          <input
            autoCapitalize="on"
            autoComplete="on"
            autoCorrect="on"
            className="outlined--dotted outlined--light h3 hard-top flush-bottom text-brand show-placeholder_11ef8g5"
            data-lpignore={undefined}
            data-spec="input"
            defaultValue={undefined}
            disabled={undefined}
            id={undefined}
            maxLength=""
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="0.00"
            readOnly={undefined}
            spellCheck={undefined}
            step="0.01"
            style={
              Object {
                "maxWidth": "165px",
                "paddingLeft": ".8em",
              }
            }
            type="tel"
          />
        </span>
      </div>
    </Input>
    <div
      className="display-block"
    >
      <h3
        className="text-dark-primary push-half-bottom push-half-right display-inline-block"
      >
        to
      </h3>
      <Select
        classes={
          Array [
            "soft-bottom",
            "display-inline-block",
            "select_1rryh47",
          ]
        }
        defaultValue="main fund"
        hideLabel={true}
        includeBlank={true}
        inputClasses="text-dark-tertiary outlined--dotted outlined--light h3 hard-top flush-bottom"
        items={
          Array [
            Object {
              "value": "main fund",
            },
          ]
        }
        onChange={undefined}
        placeholder="select fund"
        selected={undefined}
      >
        <div
          className="input input--active soft-bottom display-inline-block select_1rryh47 select_e8htpf"
        >
          <select
            className="text-dark-tertiary outlined--dotted outlined--light h3 hard-top flush-bottom"
            defaultValue="main fund"
            disabled={undefined}
            id={undefined}
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="select fund"
            style={undefined}
          >
            <option
              style={
                Object {
                  "display": "none",
                }
              }
            >
              select fund
            </option>
            <option
              className={undefined}
              key="0"
              value="main fund"
            >
              main fund
            </option>
          </select>
        </div>
      </Select>
    </div>
  </div>
</Layout>
`;

exports[`should accept multiple accounts through accounts prop 1`] = `
<Layout
  accounts={
    Array [
      Object {
        "value": "hello",
      },
      Object {
        "value": "world",
      },
    ]
  }
  preFill={[Function]}
  state={
    Object {
      "fund": "main",
      "id": "test",
    }
  }
>
  <div>
    <div
      className="display-inline-block push-half-bottom h3 push-half-right text-dark-primary"
    >
      and give
    </div>
    <Input
      classes={
        Array [
          "soft-bottom",
          "input--active",
          "display-inline-block",
        ]
      }
      defaultValue={undefined}
      format={undefined}
      hideLabel={true}
      inputClasses="outlined--dotted outlined--light h3 hard-top flush-bottom text-brand show-placeholder_11ef8g5"
      pattern={true}
      placeholder="0.00"
      step="0.01"
      style={
        Object {
          "maxWidth": "165px",
          "paddingLeft": ".8em",
        }
      }
      type="tel"
      value={undefined}
    >
      <div
        className="input soft-bottom input--active display-inline-block"
        data-spec="input-wrapper"
        style={
          Object {
            "maxWidth": "165px",
            "paddingLeft": ".8em",
          }
        }
      >
        <RenderLabel
          disabled={undefined}
          hideLabel={true}
          id={undefined}
          label={undefined}
          name={undefined}
          style={undefined}
        />
        <span
          className="
        dollar--icon
        hard-top
        flush-bottom
        text-brand"
          style={
            Object {
              "color": "#858585",
            }
          }
        >
          <input
            autoCapitalize="on"
            autoComplete="on"
            autoCorrect="on"
            className="outlined--dotted outlined--light h3 hard-top flush-bottom text-brand show-placeholder_11ef8g5"
            data-lpignore={undefined}
            data-spec="input"
            defaultValue={undefined}
            disabled={undefined}
            id={undefined}
            maxLength=""
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="0.00"
            readOnly={undefined}
            spellCheck={undefined}
            step="0.01"
            style={
              Object {
                "maxWidth": "165px",
                "paddingLeft": ".8em",
              }
            }
            type="tel"
          />
        </span>
      </div>
    </Input>
    <div
      className="display-block"
    >
      <h3
        className="text-dark-primary push-half-bottom push-half-right display-inline-block"
      >
        to
      </h3>
      <Select
        classes={
          Array [
            "soft-bottom",
            "display-inline-block",
            "select_1rryh47",
          ]
        }
        defaultValue="hello"
        hideLabel={true}
        includeBlank={true}
        inputClasses="text-dark-tertiary outlined--dotted outlined--light h3 hard-top flush-bottom"
        items={
          Array [
            Object {
              "value": "hello",
            },
            Object {
              "value": "world",
            },
          ]
        }
        onChange={undefined}
        placeholder="select fund"
        selected={undefined}
      >
        <div
          className="input input--active soft-bottom display-inline-block select_1rryh47 select_e8htpf"
        >
          <select
            className="text-dark-tertiary outlined--dotted outlined--light h3 hard-top flush-bottom"
            defaultValue="hello"
            disabled={undefined}
            id={undefined}
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="select fund"
            style={undefined}
          >
            <option
              style={
                Object {
                  "display": "none",
                }
              }
            >
              select fund
            </option>
            <option
              className={undefined}
              key="0"
              value="hello"
            >
              hello
            </option>
            <option
              className={undefined}
              key="1"
              value="world"
            >
              world
            </option>
          </select>
        </div>
      </Select>
    </div>
  </div>
</Layout>
`;

exports[`should render with minimal props 1`] = `
<Layout
  accounts={
    Array [
      Object {
        "value": "main fund",
      },
    ]
  }
  preFill={[Function]}
  state={
    Object {
      "fund": "main",
      "id": "test",
    }
  }
>
  <div>
    <div
      className="display-inline-block push-half-bottom h3 push-half-right text-dark-primary"
    >
      and give
    </div>
    <Input
      classes={
        Array [
          "soft-bottom",
          "input--active",
          "display-inline-block",
        ]
      }
      defaultValue={undefined}
      format={undefined}
      hideLabel={true}
      inputClasses="outlined--dotted outlined--light h3 hard-top flush-bottom text-brand show-placeholder_11ef8g5"
      pattern={true}
      placeholder="0.00"
      step="0.01"
      style={
        Object {
          "maxWidth": "165px",
          "paddingLeft": ".8em",
        }
      }
      type="tel"
      value={undefined}
    >
      <div
        className="input soft-bottom input--active display-inline-block"
        data-spec="input-wrapper"
        style={
          Object {
            "maxWidth": "165px",
            "paddingLeft": ".8em",
          }
        }
      >
        <RenderLabel
          disabled={undefined}
          hideLabel={true}
          id={undefined}
          label={undefined}
          name={undefined}
          style={undefined}
        />
        <span
          className="
        dollar--icon
        hard-top
        flush-bottom
        text-brand"
          style={
            Object {
              "color": "#858585",
            }
          }
        >
          <input
            autoCapitalize="on"
            autoComplete="on"
            autoCorrect="on"
            className="outlined--dotted outlined--light h3 hard-top flush-bottom text-brand show-placeholder_11ef8g5"
            data-lpignore={undefined}
            data-spec="input"
            defaultValue={undefined}
            disabled={undefined}
            id={undefined}
            maxLength=""
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="0.00"
            readOnly={undefined}
            spellCheck={undefined}
            step="0.01"
            style={
              Object {
                "maxWidth": "165px",
                "paddingLeft": ".8em",
              }
            }
            type="tel"
          />
        </span>
      </div>
    </Input>
    <div
      className="display-block"
    >
      <h3
        className="text-dark-primary push-half-bottom push-half-right display-inline-block"
      >
        to
      </h3>
      <Select
        classes={
          Array [
            "soft-bottom",
            "display-inline-block",
            "select_1rryh47",
          ]
        }
        defaultValue="main fund"
        hideLabel={true}
        includeBlank={true}
        inputClasses="text-dark-tertiary outlined--dotted outlined--light h3 hard-top flush-bottom"
        items={
          Array [
            Object {
              "value": "main fund",
            },
          ]
        }
        onChange={undefined}
        placeholder="select fund"
        selected={undefined}
      >
        <div
          className="input input--active soft-bottom display-inline-block select_1rryh47 select_e8htpf"
        >
          <select
            className="text-dark-tertiary outlined--dotted outlined--light h3 hard-top flush-bottom"
            defaultValue="main fund"
            disabled={undefined}
            id={undefined}
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="select fund"
            style={undefined}
          >
            <option
              style={
                Object {
                  "display": "none",
                }
              }
            >
              select fund
            </option>
            <option
              className={undefined}
              key="0"
              value="main fund"
            >
              main fund
            </option>
          </select>
        </div>
      </Select>
    </div>
  </div>
</Layout>
`;
